--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <a class="logotype link" href="./index.html">Web<span class="logo-span">Studio</span></a>
         <ul class="menu list">
             <li class="menu-item">
-                <a class="menu-link current-page" href="./index.html">Studio</a>
+                <a class="menu-link current-page link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-                <a class="menu-link" href="">Portfolio</a>
+                <a class="menu-link link" href="">Portfolio</a>
             </li>
             <li class="menu-item">
-                <a class="menu-link" href="">Contacts</a>
+                <a class="menu-link link" href="">Contacts</a>
             </li>
         </ul>
         </nav>
@@ -461,7 +461,7 @@
 <footer class="page-footer">
     <div class="footer-container container">
         <div class="footer-first-div">
-            <a class="logotype-link-footer" href="./index.html">Web<span class="logo-span-studio">Studio</span></a>
+            <a class="logotype-link-footer link" href="./index.html">Web<span class="logo-span-studio">Studio</span></a>
             <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
             <div class="footer-social-media-list">
@@ -508,7 +508,7 @@
         
                 <li class="social-list-item">
                     <a href="" class="footer-social-list-link">
-                        <svg class="footer-social-list-icon" xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 16 16" fill="none">
+                        <svg class="footer-social-list-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="none">
                             <use href="./images/sprite.svg#icon-linkedin"></use>
                             <g clip-path="url(#clip0_610505_850)">
                             <path d="M15.9961 16V15.9993H16.0001V10.1313C16.0001 7.26065 15.3821 5.04932 12.0261 5.04932C10.4128 5.04932 9.33009 5.93465 8.88809 6.77398H8.84143V5.31732H5.65942V15.9993H8.97276V10.71C8.97276 9.31732 9.23676 7.97065 10.9614 7.97065C12.6608 7.97065 12.6861 9.55998 12.6861 10.7993V16H15.9961Z" fill="#F4F4FD"/>
@@ -552,7 +552,7 @@
 
 
 <!-- BACKDROP SECTION -->
-<div class="backdrop is-open">
+<div class="backdrop">   вернути із оупен
     <div class="modal">
         <button class="modal-close-button" 
             type="button"
@@ -655,7 +655,7 @@
 
 <!-- MOBILE MENU -->
 
-<div class="mobile-menu is-open">
+<div class="mobile-menu"> включити із оупен
     <div class="container mobile-menu-container">
         <button class="mobile-menu-close-button" 
         type="button"
@@ -668,11 +668,11 @@
         <nav class="mobile-menu-navigation">
             <ul class="mobile-menu-navigation-list list">
                 <li class="mobile-menu-navigation-item">
-                    <a class="mobile-menu-navigation-link current-page" href="./index.html">Studio</a></li>
+                    <a class="mobile-menu-navigation-link link current-page" href="./index.html">Studio</a></li>
                 <li class="mobile-menu-navigation-item">
-                    <a class="mobile-menu-navigation-link" href="">Portfolio</a></li>
+                    <a class="mobile-menu-navigation-link link" href="">Portfolio</a></li>
                 <li class="mobile-menu-navigation-item">
-                    <a class="mobile-menu-navigation-link" href="">Contacts</a></li>
+                    <a class="mobile-menu-navigation-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         
