--- a/index.html
+++ b/index.html
@@ -115,8 +115,20 @@
 <h2 class="second-heading-team">Our Team</h2>
 <ul class="our-team-list list">
     <li class="our-team-list-item"> 
-        <img class="our-team-img" srcset="./images/img@2.png" src="./images/img.jpg" alt="Mark" width="264" height="260"/>
-        <div class="div-team">
+        <img
+        srcset="
+          ./images/images/mark-guerrero-mobile.jpg     264w,
+          ./images/images/mark-guerrero-tablet.jpg     264w,
+          ./images/images/mark-guerrero-desktop.jpg    264w,
+          ./images/images/mark-guerrero-mobile@2x.jpg  528w,
+          ./images/images/mark-guerrero-tablet@2x.jpg  528w,
+          ./images/images/mark-guerrero-desktop@2x.jpg 528w
+        "
+        sizes="(min-width: 1158px) 264px, (min-width: 768px) 264px, (max-width: 767px) 264px"
+        src="./images/images/mark-guerrero-mobile.jpg"
+        alt="Mark-Guerrero"
+        width="264"
+      />        <div class="div-team">
             <h3 class="third-heading">Mark Guerrero</h3>
             <p class="paragraph-item">Product Designer</p>
             <ul class="social-list list">
@@ -164,8 +176,20 @@
     </li>
 
     <li class="our-team-list-item"> 
-        <img class="our-team-img" srcset="./images/img@2-2.png" src="./images/img-2.jpg" alt="Tom" width="264" height="260"/>
-        <div class="div-team">
+        <img
+        srcset="
+          ./images/images/tom-ford-mobile.jpg     264w,
+          ./images/images/tom-ford-tablet.jpg     264w,
+          ./images/images/tom-ford-desktop.jpg    264w,
+          ./images/images/tom-ford-mobile@2x.jpg  528w,
+          ./images/images/tom-ford-tablet@2x.jpg  528w,
+          ./images/images/tom-ford-desktop@2x.jpg 528w
+        "
+        sizes="(min-width: 1158px) 264px, (min-width: 768px) 264px, (max-width: 767px) 264px"
+        src="./images/images/tom-ford-mobile.jpg"
+        alt="Tom-Ford"
+        width="264"
+      />        <div class="div-team">
             <h3 class="third-heading">Tom Ford</h3>
             <p class="paragraph-item">Frontend Developer</p>
             <ul class="social-list list">
@@ -230,8 +254,20 @@
     </li>
 
     <li class="our-team-list-item"> 
-        <img class="our-team-img" srcset="./images/img@2-3.png" src="./images/img-3.jpg" alt="Camila" width="264" height="260"/>
-        <div class="div-team">
+        <img
+        srcset="
+          ./images/images/camila-garcia-mobile.jpg     264w,
+          ./images/images/camila-garcia-tablet.jpg     264w,
+          ./images/images/camila-garcia-desktop.jpg    264w,
+          ./images/images/camila-garcia-mobile@2x.jpg  528w,
+          ./images/images/camila-garcia-tablet@2x.jpg  528w,
+          ./images/images/camila-garcia-desktop@2x.jpg 528w
+        "
+        sizes="(min-width: 1158px) 264px, (min-width: 768px) 264px, (max-width: 767px) 264px"
+        src="./images/images/camila-garcia-mobile.jpg"
+        alt="Camila-Garcia"
+        width="264"
+      />        <div class="div-team">
             <h3 class="third-heading">Camila Garcia</h3>
             <p class="paragraph-item">Marketing</p>
             <ul class="social-list list">
@@ -296,8 +332,20 @@
     </li>
 
     <li class="our-team-list-item"> 
-        <img class="our-team-img" srcset="./images/img@2-4.png" src="./images/img-4.jpg" alt="Daniel" width="264" height="260"/>
-        <div class="div-team">
+        <img
+        srcset="
+          ./images/images/daniel-wilson-mobile.jpg     264w,
+          ./images/images/daniel-wilson-tablet.jpg     264w,
+          ./images/images/daniel-wilson-desktop.jpg    264w,
+          ./images/images/daniel-wilson-mobile@2x.jpg  528w,
+          ./images/images/daniel-wilson-tablet@2x.jpg  528w,
+          ./images/images/daniel-wilson-desktop@2x.jpg 528w
+        "
+        sizes="(min-width: 1158px) 264px, (min-width: 768px) 264px, (max-width: 767px) 264px"
+        src="./images/images/daniel-wilson-mobile.jpg"
+        alt="Daniel-Wilson"
+        width="264"
+      />        <div class="div-team">
             <h3 class="third-heading">Daniel Wilson</h3>
             <p class="paragraph-item">UI Designer</p>
             <ul class="social-list list">
@@ -373,8 +421,20 @@
 
         <li class="portfolio-list-item">
             <div class="portfolio-list-item-overlay">
-                    <img class="portfolio-list-img" srcset="./images/img-banking-app@2.png" src="./images/img-banking-app.jpg" alt="banking-app" width="360" height="300">
-                    <p class="overlay-text">
+                <img
+                srcset="
+                  ./images/images/banking-app-mobile.jpg     288w,
+                  ./images/images/banking-app-tablet.jpg     356w,
+                  ./images/images/banking-app-desktop.jpg    360w,
+                  ./images/images/banking-app-mobile@2x.jpg  576w,
+                  ./images/images/banking-app-tablet@2x.jpg  712w,
+                  ./images/images/banking-app-desktop@2x.jpg 720w
+                "
+                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                src="./images/images/banking-app-mobile.jpg"
+                alt="Banking App"
+                width="360"
+              />                    <p class="overlay-text">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
             </div>
@@ -388,8 +448,20 @@
 
         <li class="portfolio-list-item">
             <div class="portfolio-list-item-overlay">
-                <img class="portfolio-list-img" srcset="./images/img-cashless-payment@2.png" src="./images/img-cashless-payment.jpg" alt="cashless-payment" width="360" height="300">
-                <p class="overlay-text">
+                <img
+                srcset="
+                  ./images/images/cashless-payment-mobile.jpg     288w,
+                  ./images/images/cashless-payment-tablet.jpg     356w,
+                  ./images/images/cashless-payment-desktop.jpg    360w,
+                  ./images/images/cashless-payment-mobile@2x.jpg  576w,
+                  ./images/images/cashless-payment-tablet@2x.jpg  712w,
+                  ./images/images/cashless-payment-desktop@2x.jpg 720w
+                "
+                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                src="./images/images/cashless-payment-mobile.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />                <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
             </div>
@@ -401,8 +473,20 @@
 
         <li class="portfolio-list-item">
             <div class="portfolio-list-item-overlay">
-                <img class="portfolio-list-img" srcset="./images/img-meditation-app@2.png" src="./images/img-meditation-app.jpg" alt="meditation-app" width="360" height="300">
-                <p class="overlay-text">
+                <img
+                srcset="
+                  ./images/images/meditation-app-mobile.jpg     288w,
+                  ./images/images/meditation-app-tablet.jpg     356w,
+                  ./images/images/meditation-app-desktop.jpg    360w,
+                  ./images/images/meditation-app-mobile@2x.jpg  576w,
+                  ./images/images/meditation-app-tablet@2x.jpg  712w,
+                  ./images/images/meditation-app-desktop@2x.jpg 720w
+                "
+                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                src="./images/images/meditation-app-mobile.jpg"
+                alt="Meditaion App"
+                width="360"
+              />                <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
             </div>
@@ -414,8 +498,21 @@
 
         <li class="portfolio-list-item">
             <div class="portfolio-list-item-overlay">
-                <img class="portfolio-list-img" srcset="./images/img-taxi-servise@2.png" src="./images/img-taxi-servise.jpg" alt="taxi-servise" width="360" height="300">
-                <p class="overlay-text">
+                <img
+                srcset="
+                  ./images/images/taxi-service-mobile.jpg     288w,
+                  ./images/images/taxi-service-tablet.jpg     356w,
+                  ./images/images/taxi-service-desktop.jpg    360w,
+                  ./images/images/taxi-service-mobile@2x.jpg  576w,
+                  ./images/images/taxi-service-tablet@2x.jpg  712w,
+                  ./images/images/taxi-service-desktop@2x.jpg 720w
+                "
+                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                src="./images/images/taxi-service-mobile.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
             </div>
@@ -427,8 +524,20 @@
 
         <li class="portfolio-list-item">
             <div class="portfolio-list-item-overlay">
-                <img class="portfolio-list-img" srcset="./images/img-screen-illustrations@2.png" src="./images/img-screen-illustrations.jpg" alt="screen-illustrations" width="360" height="300">
-                <p class="overlay-text">
+                <img
+                srcset="
+                  ./images/images/screen-illustrations-mobile.jpg     288w,
+                  ./images/images/screen-illustrations-tablet.jpg     356w,
+                  ./images/images/screen-illustrations-desktop.jpg    360w,
+                  ./images/images/screen-illustrations-mobile@2x.jpg  576w,
+                  ./images/images/screen-illustrations-tablet@2x.jpg  712w,
+                  ./images/images/screen-illustrations-desktop@2x.jpg 720w
+                "
+                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                src="./images/images/screen-illustrations-mobile.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />                <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
             </div>
@@ -440,8 +549,20 @@
 
         <li class="portfolio-list-item">
             <div class="portfolio-list-item-overlay">
-                <img class="portfolio-list-img" srcset="./images/img-online-courses@2.png" src="./images/img-online-courses.jpg" alt="online-courses" width="360" height="300">
-                <p class="overlay-text">
+                <img
+                srcset="
+                  ./images/images/online-courses-mobile.jpg     288w,
+                  ./images/images/online-courses-tablet.jpg     356w,
+                  ./images/images/online-courses-desktop.jpg    360w,
+                  ./images/images/online-courses-mobile@2x.jpg  576w,
+                  ./images/images/online-courses-tablet@2x.jpg  712w,
+                  ./images/images/online-courses-desktop@2x.jpg 720w
+                "
+                sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
+                src="./images/images/online-courses-mobile.jpg"
+                alt="Online Courses"
+                width="360"
+              />                <p class="overlay-text">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                  </p>
             </div>
@@ -460,6 +581,7 @@
 <!-- PAGE FOOTER -->
 <footer class="page-footer">
     <div class="footer-container container">
+        <div class="tablet-footer"> 
         <div class="footer-first-div">
             <a class="logotype-link-footer link" href="./index.html">Web<span class="logo-span-studio">Studio</span></a>
             <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -525,6 +647,7 @@
                 </li>
             </ul>
         </div>
+    </div>
 
         <div class="footer-subscribe">
                 <p class="footer-subscribe-text">Subscribe</p>
