--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
 
 <!-- MOBILE MENU -->
 
-<div class="mobile-menu"> включити із оупен
+<div class="mobile-menu is-open">
     <div class="container mobile-menu-container">
         <button class="mobile-menu-close-button" 
         type="button"
