--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 
 
 <!-- BACKDROP SECTION -->
-<div class="backdrop">   вернути із оупен
+<div class="backdrop is-open">
     <div class="modal">
         <button class="modal-close-button" 
             type="button"
