--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                     <a class="mobile-menu-navigation-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        
+        <div class="mobile-menu-adress-social">
             <address class="mobile-menu-contacts">
             <ul class="mobile-menu-contacts-list list">
                 <li class="mobile-menu-contacts-item">
@@ -810,7 +810,6 @@
                     <a class="mobile-menu-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
             </address>
-
             <ul class="mobile-social-list list">
                 <li class="mobile-social-list-item">
                     <a href="" class="mobile-social-list-link">
@@ -869,6 +868,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
         </nav>
     </div>
 </div>
